auto-populate given URL

--- a/statseo.html
+++ b/statseo.html
@@ -203,7 +203,7 @@ var websiteName = websiteSplit[1];
 	      });
 	});
 	
-	function initDatatables(){
+	function initDataTables(){
 	
 		// $(document).ready(function() {
 			$('#example3').dataTable( {
