auto-populate given URL

--- a/statseo.html
+++ b/statseo.html
@@ -351,6 +351,7 @@ var websiteName = websiteSplit[1];
 		document.getElementById("dispUrl").innerHTML = "for " + websiteURLlocal;
 	    
 		onsiteHarmTable.FnDraw();
+		topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
 		    
 		// return websiteSplit[1];
 	}
