--- a/statseo.html
+++ b/statseo.html
@@ -340,8 +340,9 @@ var websiteName = websiteSplit[1];
 	// }
 	
 	var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
-	initGraph(topLevelFile);
-	
+	$(document).ready(function() {
+		initGraph(topLevelFile);
+	};
 
 	function doStuff()
 	{
@@ -354,8 +355,8 @@ var websiteName = websiteSplit[1];
 		document.getElementById("dispUrl").innerHTML = "for " + websiteURLlocal;
 	    
 		onsiteHarmTable.FnDraw();
-		topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
-		redrawGraph(topLevelFile);    
+		newFile = "/json/toplevel/" + websiteName + "_ybar.json";
+		redrawGraph(newFile);    
 		// return websiteSplit[1];
 	}
 	
