auto-populate given URL

--- a/statseo.html
+++ b/statseo.html
@@ -350,7 +350,7 @@ var websiteName = websiteSplit[1];
 		websiteSplit= websiteURL.split(".");
 		websiteName = websiteSplit[1];
 
-		document.getElementById("dispUrl").innerHTML = "for " + websiteURLlocal;
+		document.getElementById("dispUrl").innerHTML = "for " + websiteName;
 	    
 		onsiteHarmTable.FnDraw();
 		newFile = "/json/toplevel/" + websiteName + "_ybar.json";
