--- a/statseo.html
+++ b/statseo.html
@@ -187,6 +187,8 @@ text {
 	-->
 
 <script>
+
+/* Global vars */
 var websiteURL = "www.stealthgenie.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
@@ -205,7 +207,7 @@ var websiteName = websiteSplit[1];
 	
 	
 	$(document).ready(function() {
-		onsiteHarmTable = $('#example3').dataTable( {
+		$('#example3').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/summary/"+websiteName+"_Xhat.json",
 			"sAjaxDataProp": "onsite",
@@ -352,13 +354,15 @@ var websiteName = websiteSplit[1];
 		alert('point1');
 		document.getElementById("dispUrl").innerHTML = "for " + websiteName;
 	    alert('point2');
-		onsiteHarmTable.fnReloadAjax();
+		$('#example3').dataTable().fnReloadAjax();
+		// onsiteHarmTable.fnReloadAjax();
 		alert('point3');
-		onsiteHealthTable.fnReloadAjax();
-		alert('point4');
-		newFile = "/json/toplevel/" + websiteName + "_ybar.json";
-		redrawGraph(newFile);    
-		alert('point5');
+		// onsiteHealthTable.fnReloadAjax();
+// 		alert('point4');
+// 		newFile = "/json/toplevel/" + websiteName + "_ybar.json";
+// 		redrawGraph(newFile);    
+// 		alert('point5');
+
 		// return websiteSplit[1];
 	}
 	
