--- a/statseo.html
+++ b/statseo.html
@@ -27,7 +27,7 @@
 
 	<!-- for datatables -->
 	<script src="datatables/media/js/jquery.dataTables.js"></script>
-	<script type="text/javascript" src="dataTables.fnReloadAjax.js"></script>
+
 
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
@@ -44,7 +44,7 @@
 	<!-- for datatables -->
 	<style type="text/css" title="currentStyle">
 	@import "datatables/media/css/demo_page.css"; 
-	@import "datatables/media/css/header.ccss";
+	@import "datatables/media/css/header.ccs";
 	@import "datatables/media/css/demo_table.css";
 	</style>
 	
