auto-populate given URL

--- a/statseo.html
+++ b/statseo.html
@@ -44,7 +44,7 @@
 	<!-- for datatables -->
 	<style type="text/css" title="currentStyle">
 	@import "datatables/media/css/demo_page.css"; 
-	@import "datatables/media/css/header.css";
+	@import "datatables/media/css/header.ccss";
 	@import "datatables/media/css/demo_table.css";
 	</style>
 	
