--- a/statseo.html
+++ b/statseo.html
@@ -215,9 +215,9 @@ $.fn.dataTableExt.oApi.fnReloadAjax = function ( oSettings, sNewSource, fnCallba
 		that.oApi._fnClearTable( oSettings );
          
 		/* Got the data - add it to the table */
-		for ( var i=0 ; i<json.aaData.length ; i++ )
+		for ( var i=0 ; i<json.length ; i++ )
 		{
-			that.oApi._fnAddData( oSettings, json.aaData[i] );
+			that.oApi._fnAddData( oSettings, json[i] );
 		}
          
 		oSettings.aiDisplay = oSettings.aiDisplayMaster.slice();
