--- a/statseo.html
+++ b/statseo.html
@@ -257,147 +257,119 @@ $.fn.dataTableExt.oApi.fnReloadAjax = function ( oSettings, sNewSource, fnCallba
 jQuery(document).ready(function($) {
 	$(".clickableRow").click(function() {
 		window.document.location = $(this).attr("href");
-	      });
 	});
+});
 	
 	
-	var dataTableOne;
-	var dataTableTwo;
-	var dataTableThree;
-	var dataTableFour;
+var dataTableOne;
+var dataTableTwo;
+var dataTableThree;
+var dataTableFour;
 
-	function initDataTables(){
-		$(document).ready(function() {
-			dataTableOne = $('#example3').dataTable( {
-				"bProcessing": true,
-				"sAjaxSource": "/json/summary/"+websiteName+"_Xhat.json",
-				"sAjaxDataProp": "onsite",
-				"aaSorting": [[ 4, "desc" ]],
-				"aoColumns": [
-				null,
-				{ "mData": null , //its null here because history column will contain the mRender
-				"mRender" : function ( data, type, full) {
-					return '<a href="onsite_SQ_drilldown.html#F'+ full[0] +'">'+full[1]+'</a>';
-				}
-			},
-			null,
-			{"bVisible": false},
-			null,
-			{"bVisible": false},		
-			{"bVisible": false},
-			{"bVisible": false},
-			{"bVisible": false},
-			{"bVisible": false}
-			]
-		} );
-	} );
-		
-	
-	// $(document).ready(function() {
-		dataTableTwo = $('#example3b').dataTable( {
+function initDataTables(){
+	$(document).ready(function() {
+		dataTableOne = $('#example3').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/summary/"+websiteName+"_Xhat.json",
 			"sAjaxDataProp": "onsite",
-			"aaSorting": [[ 7, "desc" ]],
+			"aaSorting": [[ 4, "desc" ]],
 			"aoColumns": [
 			null,
-			null,
-			{"bVisible": false},
-			null,
-			{"bVisible": false},
-			{"bVisible": false},
-			{"bVisible": false},
-			null,
-			{"bVisible": false},
-			{"bVisible": false}
-			]
-		} );
-		// } );
-	
-		// $(document).ready(function() {
+			{ "mData": null , //its null here because history column will contain the mRender
+			"mRender" : function ( data, type, full) {
+				return '<a href="onsite_SQ_drilldown.html#F'+ full[0] +'">'+full[1]+'</a>';
+			}
+		},
+		null,
+		{"bVisible": false},
+		null,
+		{"bVisible": false},		
+		{"bVisible": false},
+		{"bVisible": false},
+		{"bVisible": false},
+		{"bVisible": false}
+		]
+	} );
+} );
 		
-			dataTableThree = $('#example4').dataTable( {
-				"bProcessing": true,
-				"sAjaxSource": "/json/summary/"+websiteName+"_XhatOff.json",
-				"sAjaxDataProp": "offsite",
-				"aaSorting": [[ 4, "desc" ]],
-				"aoColumns": [
-				null,
-				{ "mData": null , //its null here because history column will contain the mRender
-				"mRender" : function ( data, type, full) {
-					return '<a href="offsite_SQ_drilldown.html#F'+ full[0] +'">'+full[1]+'</a>';
-				}
-			},
-			null,
-			{"bVisible": false},
-			null,
-			{"bVisible": false},		
-			{"bVisible": false},
-			{"bVisible": false},
-			{"bVisible": false},
-			{"bVisible": false}
-			]
-		} );
-		// } );
 	
-		// $(document).ready(function() {
-			dataTableFour = $('#example4b').dataTable( {
-				"bProcessing": true,
-				"sAjaxSource": "/json/summary/"+websiteName+"_XhatOff.json",
-				"sAjaxDataProp": "offsite",
-				"aaSorting": [[ 7, "desc" ]],
-				"aoColumns": [
-				null,
-				null,
-				{"bVisible": false},
-				null,
-				{"bVisible": false},
-				{"bVisible": false},
-				{"bVisible": false},
-				null,
-				{"bVisible": false},
-				{"bVisible": false}
-				]
-			} );
-			// } );
+dataTableTwo = $('#example3b').dataTable( {
+	"bProcessing": true,
+	"sAjaxSource": "/json/summary/"+websiteName+"_Xhat.json",
+	"sAjaxDataProp": "onsite",
+	"aaSorting": [[ 7, "desc" ]],
+	"aoColumns": [
+	null,
+	null,
+	{"bVisible": false},
+	null,
+	{"bVisible": false},
+	{"bVisible": false},
+	{"bVisible": false},
+	null,
+	{"bVisible": false},
+	{"bVisible": false}
+	]
+} );
+
+		
+dataTableThree = $('#example4').dataTable( {
+	"bProcessing": true,
+	"sAjaxSource": "/json/summary/"+websiteName+"_XhatOff.json",
+	"sAjaxDataProp": "offsite",
+	"aaSorting": [[ 4, "desc" ]],
+	"aoColumns": [
+	null,
+	{ "mData": null , //its null here because history column will contain the mRender
+	"mRender" : function ( data, type, full) {
+		return '<a href="offsite_SQ_drilldown.html#F'+ full[0] +'">'+full[1]+'</a>';
+	}
+},
+null,
+{"bVisible": false},
+null,
+{"bVisible": false},		
+{"bVisible": false},
+{"bVisible": false},
+{"bVisible": false},
+{"bVisible": false}
+]
+} );
+
+dataTableFour = $('#example4b').dataTable( {
+"bProcessing": true,
+"sAjaxSource": "/json/summary/"+websiteName+"_XhatOff.json",
+"sAjaxDataProp": "offsite",
+"aaSorting": [[ 7, "desc" ]],
+"aoColumns": [
+null,
+null,
+{"bVisible": false},
+null,
+{"bVisible": false},
+{"bVisible": false},
+{"bVisible": false},
+null,
+{"bVisible": false},
+{"bVisible": false}
+]
+} );
+
+}
+
+/* within ready event of pageload */
+
+$(document).ready(function(){
+initDataTables();
+/* all other page load code*/
+
+});
 	
-		}
-
-		/* within ready event of pageload */
-
-		$(document).ready(function(){
-			initDataTables();
-			/* all other page load code*/
-
-		});
-	
-	</script>
+</script>
 	
 	
 	
 	<script>
-
-	// function addEventHandler(node, type, f) {
-	//    if (node.addEventListener) {
-	//       node.addEventListener(type, f, false);
-	//    } 
-	//    else if (node.attachEvent) {
-	//       node.attachEvent("on" + type, f);
-	//    } 
-	//    else {
-	//       node["on" + type] = f;
-	//    }
-	// }
-	// 
-	// var myButton = document.getElementById('submitUrl');
-	// 
-	// addEventHandler(myButton, 'click', doSomething);
-	// 
-	// function doSomething() {
-	//    alert('Button clicked');
-	// }
-	
-
 
 
 	function doStuff()
@@ -413,14 +385,10 @@ jQuery(document).ready(function($) {
 		dataTableTwo.fnReloadAjax("/json/summary/"+websiteName+"_Xhat.json");
 		dataTableThree.fnReloadAjax("/json/summary/"+websiteName+"_XhatOff.json");
 		dataTableFour.fnReloadAjax("/json/summary/"+websiteName+"_XhatOff.json");
-		// "/json/summary/"+websiteName+"_Xhat.json"
-		// onsiteHarmTable.fnReloadAjax();
-		
-		// onsiteHealthTable.fnReloadAjax();
+
 		newFile = "/json/toplevel/" + websiteName + "_ybar.json";
 		redrawGraph(newFile);    
-		
-		// return websiteSplit[1];
+
 	}
 	
 	</script>
@@ -613,12 +581,14 @@ redrawGraph = function(file) {
 	
 			</div>  
 			
+			<hr>
+			
 			<div id="dispUrl" class="lead" >
-				<hr>
+				
 				<!-- Special typography from Bootstrap for lead paragraph. -->
 				<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
 				<!-- <p >for </p> -->
-				for 
+				for stealthgenie
 			</div>
 		  
 			<hr>
