--- a/statseo.html
+++ b/statseo.html
@@ -28,7 +28,7 @@
 	<script type="text/javascript" charset="utf-8" src="datatables/media/js/TableTools.js"></script>
 	<script type="text/javascript" charset="utf-8" src="http://datatables.github.com/Plugins/integration/bootstrap/2/dataTables.bootstrap.js"></script>
 	
-	<script type="text/javascript" charset="utf-8">
+<!-- 	<script type="text/javascript" charset="utf-8">
 	$(document).ready( function () {
 		$('#example').dataTable( {
 			
@@ -36,7 +36,7 @@
 		} );
 	} );
 	</script>
-	
+	 -->
 	
 	<!-- for nv.d3 charts -->
 	<link href="src/nv.d3.css" rel="stylesheet" type="text/css">
@@ -48,7 +48,7 @@
 	@import "datatables/media/css/demo_table.css";
 	
 	/* for re-styling and CSV export */
-	@import "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css";
+	@import "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css";
 	@import "http://datatables.github.com/Plugins/integration/bootstrap/2/dataTables.bootstrap.css";
 	
 	</style>
