--- a/statseo.html
+++ b/statseo.html
@@ -629,7 +629,7 @@ redrawGraph = function(file) {
 							</div>
 							<div class="panel-body">
 			  
-								<table cellpadding="0" cellspacing="0" border="0" class="display" class="table table-striped table-bordered" id="example3">
+								<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example3">
 									<thead>
 										<tr>
 											<th width="5%">Influence rank</th>
