--- a/statseo.html
+++ b/statseo.html
@@ -297,6 +297,18 @@ dataTableTwo = $('#example3b').dataTable( {
 	"sAjaxSource": "/json/summary/"+websiteName+"_Xhat.json",
 	"sAjaxDataProp": "onsite",
 	"aaSorting": [[ 7, "desc" ]],
+	"sDom": "<'row-fluid'<'span6'T><'span6'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
+	"oTableTools": {
+		"aButtons": [
+		"copy",
+		"print",
+		{
+			"sExtends":    "collection",
+			"sButtonText": 'Save <span class="caret" />',
+			"aButtons":    [ "csv", "xls", "pdf" ]
+		}
+		]
+	},
 	"aoColumns": [
 	null,
 	null,
@@ -317,6 +329,18 @@ dataTableThree = $('#example4').dataTable( {
 	"sAjaxSource": "/json/summary/"+websiteName+"_XhatOff.json",
 	"sAjaxDataProp": "offsite",
 	"aaSorting": [[ 4, "desc" ]],
+	"sDom": "<'row-fluid'<'span6'T><'span6'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
+	"oTableTools": {
+		"aButtons": [
+		"copy",
+		"print",
+		{
+			"sExtends":    "collection",
+			"sButtonText": 'Save <span class="caret" />',
+			"aButtons":    [ "csv", "xls", "pdf" ]
+		}
+		]
+	},
 	"aoColumns": [
 	null,
 	{ "mData": null , //its null here because history column will contain the mRender
@@ -340,6 +364,18 @@ dataTableFour = $('#example4b').dataTable( {
 "sAjaxSource": "/json/summary/"+websiteName+"_XhatOff.json",
 "sAjaxDataProp": "offsite",
 "aaSorting": [[ 7, "desc" ]],
+"sDom": "<'row-fluid'<'span6'T><'span6'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
+"oTableTools": {
+	"aButtons": [
+	"copy",
+	"print",
+	{
+		"sExtends":    "collection",
+		"sButtonText": 'Save <span class="caret" />',
+		"aButtons":    [ "csv", "xls", "pdf" ]
+	}
+	]
+},
 "aoColumns": [
 null,
 null,
@@ -677,7 +713,7 @@ redrawGraph = function(file) {
 				</div>
 				<div class="panel-body">
 			  
-					<table cellpadding="0" cellspacing="0" border="0" class="display" id="example3b">
+					<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"  id="example3b">
 						<thead>
 							<tr>
 								<th width="5%">Influence rank</th>
@@ -760,7 +796,7 @@ redrawGraph = function(file) {
 								  <!-- <h2>Influential Feature Delta to Winning Mean</h2>
 									  <p>For top 10 features on aggregate</p> -->
 					  
-									  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example4">
+									  <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example4">
 										<thead>
 											<tr>
 												<th width="5%">Influence rank</th>
@@ -808,7 +844,7 @@ redrawGraph = function(file) {
 									  </h3>
 								  </div> <!-- panel heading -->
 								  <div class="panel-body">
-									  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example4b">
+									  <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"  id="example4b">
 										<thead>
 											<tr>
 												<th width="5%">Influence rank</th>
