--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -143,32 +143,32 @@ var websiteURL = "www.stealthgenie.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
-var feature_list= {
-	//1:"average_backlink_flesch_reading_ease",
-2:"number_of_inline_css_styles",
-//3:"average_backlink_flesch_kincaid_grade",
-4:"number_of_images_missing_alt",
-5:"number_of_h1_instances",
-6:"number_of_images",
-7:"total_number_of_words",
-8:"total_number_of_dictionary_words",
-9:"number_of_hyperlinks_with_html",
-10:"number_of_unique_words",
-11:"ratio_of_dictionary_words_to_total",
-12:"number_of_destination_titles_same_as_anchor_text",
-13:"maximum_length_of_h1",
-14:"average_length_of_h1",
-//15:"average_backlink_dale_chall_readability",
-16:"number_of_duplicate_words",
-17:"number_of_hyperlinks_with_file",
-18:"number_of_rare_words",
-19:"total_number_of_5k_common_words",
-20:"number_of_titles_same_as_h1",
-21:"number_of_iframes",
-22:"html5_detected"
-};
 
 function initDataTables(){
+
+	feature_list= {//1:"average_backlink_flesch_reading_ease",
+	2:"number_of_inline_css_styles",
+	//3:"average_backlink_flesch_kincaid_grade",
+	4:"number_of_images_missing_alt",
+	5:"number_of_h1_instances",
+	6:"number_of_images",
+	7:"total_number_of_words",
+	8:"total_number_of_dictionary_words",
+	9:"number_of_hyperlinks_with_html",
+	10:"number_of_unique_words",
+	11:"ratio_of_dictionary_words_to_total",
+	12:"number_of_destination_titles_same_as_anchor_text",
+	13:"maximum_length_of_h1",
+	14:"average_length_of_h1",
+	//15:"average_backlink_dale_chall_readability",
+	16:"number_of_duplicate_words",
+	17:"number_of_hyperlinks_with_file",
+	18:"number_of_rare_words",
+	19:"total_number_of_5k_common_words",
+	20:"number_of_titles_same_as_h1",
+	21:"number_of_iframes",
+	22:"html5_detected"
+	};
 
 	$('#dynamicA').html( '<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example"></table>' );
 		
@@ -183,8 +183,6 @@ function initDataTables(){
 		],
 		"aaSorting": [[ 1, "asc" ]]
 	} );
-
-
 
 	
 	$('#example2').dataTable( {
