--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -137,16 +137,12 @@
 	];
 
 
-// data for chart
-
-var websiteURL = "www.stealthgenie.com";
-var websiteSplit = websiteURL.split(".");
-var websiteName = websiteSplit[1];
-
-
-function initDataTables(){
-
-	feature_list= {//1:"average_backlink_flesch_reading_ease",
+	/* Global vars */
+	var websiteURL = "www.stealthgenie.com";
+	var websiteSplit = websiteURL.split(".");
+	var websiteName = websiteSplit[1];
+	
+	var feature_list= {//1:"average_backlink_flesch_reading_ease",
 	2:"number_of_inline_css_styles",
 	//3:"average_backlink_flesch_kincaid_grade",
 	4:"number_of_images_missing_alt",
@@ -169,6 +165,11 @@ function initDataTables(){
 	21:"number_of_iframes",
 	22:"html5_detected"
 	};
+
+
+function initDataTables(){
+
+	
 
 	$('#dynamicA').html( '<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example"></table>' );
 		
@@ -799,7 +800,7 @@ return '<a href="'+ data +'">'+data+'</a>';
 } );
 
 
-} );
+};
 	
 $(document).ready(function(){
 initDataTables();
