table CSV export mods

--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -138,7 +138,7 @@
 
 
 	/* Global vars */
-	var websiteURL = "www.stealthgenie.com";
+	var websiteURL = "www.rawpearls.com";
 	var websiteSplit = websiteURL.split(".");
 	var websiteName = websiteSplit[1];
 	
