--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -4,15 +4,26 @@
   <head>
     <meta charset="utf-8">
     <title>MathSight: StatSEO Onsite Drilldown</title>
+    <title>MathSight: StatSEO Offsite Drilldown</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+	<!-- for datatables' styling -->
+	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
 	
 	<script src="datatables/media/js/jquery.js"></script>
+
+	<!-- for datatables -->
 	<script src="datatables/media/js/jquery.dataTables.js"></script>
+	<!-- for datatables' styling etc -->
+	<script type="text/javascript" charset="utf-8" src="datatables/media/js/ZeroClipboard.js"></script>
+	<script type="text/javascript" charset="utf-8" src="datatables/media/js/TableTools.js"></script>
+	
+	<script type="text/javascript" charset="utf-8" src="http://datatables.github.com/Plugins/integration/bootstrap/2/dataTables.bootstrap.js"></script>
 
 	<script type="text/javascript" charset="utf-8">
 	
@@ -125,7 +136,7 @@
 
 // data for chart
 
-var websiteURL = "www.stealthgenie.com";
+var websiteURL = "www.rawpearls.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
@@ -153,32 +164,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 22:"html5_detected"
 };
 
-// var feature_list= {1:"average_backlink_flesch_reading_ease",
-// 2:"number_of_inline_css_styles",
-// 3:"average_backlink_flesch_kincaid_grade",
-// 4:"number_of_images_missing_alt",
-// 5:"number_of_h1_instances",
-// 6:"number_of_images",
-// 7:"total_number_of_words",
-// 8:"total_number_of_dictionary_words",
-// 9:"number_of_hyperlinks_with_html",
-// 10:"number_of_unique_words",
-// 11:"ratio_of_dictionary_words_to_total",
-// 12:"number_of_destination_titles_same_as_anchor_text",
-// 13:"maximum_length_of_h1",
-// 14:"average_length_of_h1",
-// 15:"average_backlink_dale_chall_readability",
-// 16:"number_of_duplicate_words",
-// 17:"number_of_hyperlinks_with_file",
-// 18:"number_of_rare_words",
-// 19:"total_number_of_5k_common_words",
-// 20:"number_of_hyperlinks_with_file",
-// 21:"number_of_rare_words",
-// 22:"number_of_hyperlinks_with_file"
-// };
 
-	$(document).ready(function() {
+function initDataTables(){
+	
 		$('#dynamicA').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
+		
 		$('#example').dataTable( {
 			"aaData": aDataSet,
 			"aoColumns": [
@@ -191,8 +181,6 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"aaSorting": [[ 1, "asc" ]]
 		} );
 
-
-		$(document).ready(function() {
 			$('#example1').dataTable( {
 				"bProcessing": true,
 				"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -209,8 +197,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 				],
 				"aaSorting": [[ 3, "desc" ]],
 			} );
-	} );
-	$(document).ready(function() {
+
 		$('#example2').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -227,8 +214,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example3').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -245,8 +231,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example4').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -263,8 +248,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example5').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -281,8 +265,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example6').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -299,8 +282,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example7').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -317,8 +299,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example8').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -335,8 +316,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example9').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -353,8 +333,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example10').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -371,8 +350,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 					],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-	} );
-	$(document).ready(function() {
+
 		$('#example11').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -389,8 +367,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-} );
-$(document).ready(function() {
+
 	$('#example12').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -407,8 +384,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-$(document).ready(function() {
+
 	$('#example13').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -425,8 +401,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-$(document).ready(function() {
+
 	$('#example14').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -443,8 +418,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-$(document).ready(function() {
+
 	$('#example15').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -461,8 +435,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-$(document).ready(function() {
+
 	$('#example16').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -479,8 +452,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-$(document).ready(function() {
+
 	$('#example17').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -497,8 +469,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-$(document).ready(function() {
+
 	$('#example18').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -515,8 +486,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-$(document).ready(function() {
+
 	$('#example19').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -533,8 +503,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-$(document).ready(function() {
+
 	$('#example20').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -551,8 +520,7 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
-	$(document).ready(function() {
+
 		$('#example21').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -569,8 +537,7 @@ $(document).ready(function() {
 			],
 			"aaSorting": [[ 3, "desc" ]]
 		} );
-} );
-$(document).ready(function() {
+
 	$('#example22').dataTable( {
 		"bProcessing": true,
 		"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
@@ -587,12 +554,14 @@ $(document).ready(function() {
 				],
 		"aaSorting": [[ 3, "desc" ]]
 	} );
-} );
 
-
-
-} );
+};
 	
+$(document).ready(function(){
+initDataTables();
+/* all other page load code*/
+
+});
 
 </script>
 
@@ -605,6 +574,9 @@ rel="stylesheet" type="text/css">
 @import "datatables/media/css/demo_page.css"; 
 @import "datatables/media/css/header.ccss";
 @import "datatables/media/css/demo_table.css";
+/* for re-styling and CSV export */
+@import "http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css";
+@import "http://datatables.github.com/Plugins/integration/bootstrap/2/dataTables.bootstrap.css";
 </style>
     <style type="text/css">
 
