algosight and penguin 2.1 test

--- a/algosight.html
+++ b/algosight.html
@@ -571,7 +571,7 @@ d3.json(trafficFile, function(data) {
 
 		nv.utils.windowResize(chart.update);
 		// 
-		// chart.dispatch.on('stateChange', function(e) { nv.log('New State:', JSON.stringify(e)); });
+		chart.dispatch.on('stateChange', function(e) { nv.log('New State:', JSON.stringify(e)); });
 
 		return chart;
 	});
