algosight and penguin 2.1 test

--- a/algosight.html
+++ b/algosight.html
@@ -41,6 +41,8 @@
 	<!-- for nv.d3 charts -->
 	<link href="src/nv.d3.css" rel="stylesheet" type="text/css">
 	
+	
+	
 	<!-- for datatables -->
 	<style type="text/css" title="currentStyle">
 	@import "datatables/media/css/demo_page.css"; 
@@ -464,11 +466,14 @@ initDataTables();
 	</script>
 
 	<script src="lib/d3.v3.js"></script>
+	<script src="lib/fisheye.js"></script>
 	<script src="assets/js/nv.d3.js"></script>
 	<script src="src/utils.js"></script>
 	<script src="src/tooltip.js"></script>
 	<script src="src/models/legend.js"></script>
 	<script src="src/models/axis.js"></script>
+	<script src="src/models/linePlusBarChart.js"></script>
+	<script src="src/models/linePlusBarWithFocusChart.js"></script>
 	<script src="src/models/multiBarHorizontal.js"></script>
 	<script src="src/models/multiBarHorizontalChart.js"></script>
 	<script src="assets/js/stream_layers.js"></script>
