--- a/algosight.html
+++ b/algosight.html
@@ -560,13 +560,13 @@ d3.json(trafficFile, function(data) {
 		.tickFormat(d3.format(',f'));
 		 
 		chart.y2Axis
-		.tickFormat(d3.format(',f'));
-		
-		chart.y3Axis
-		.tickFormat(d3.format(',f'));
-		
-		chart.y4Axis
-		.tickFormat(d3.format(',f'));
+		.tickFormat(function(d) { return '$' + d3.format(',f')(d) });
+		// 
+		// chart.y3Axis
+		// .tickFormat(d3.format(',f'));
+		// 
+		// chart.y4Axis
+		// .tickFormat(d3.format(',f'));
 		 
 		chart.bars.forceY([0]);
 		//chart.lines.forceY([0]);
@@ -577,7 +577,7 @@ d3.json(trafficFile, function(data) {
 
 		nv.utils.windowResize(chart.update);
 		// 
-		chart.dispatch.on('stateChange', function(e) { nv.log('New State:', JSON.stringify(e)); });
+		// chart.dispatch.on('stateChange', function(e) { nv.log('New State:', JSON.stringify(e)); });
 
 		return chart;
 	});
