--- a/algosight.html
+++ b/algosight.html
@@ -483,8 +483,8 @@ initDataTables();
 
 var changeName = "penguin21"
 var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
-// var trafficFile = "/json/algosight/traffic/traffic_" + websiteName + "_"+ changeName + ".json";
-var trafficFile = "/json/algosight/traffic/test.json";
+var trafficFile = "/json/algosight/traffic/traffic_" + websiteName + "_"+ changeName + ".json";
+// var trafficFile = "/json/algosight/traffic/test.json";
 
 d3.json(trafficFile, function(data) {
 
