--- a/algosight.html
+++ b/algosight.html
@@ -511,7 +511,7 @@ d3.json(trafficFile, function(data) {
 	        .tickFormat(d3.format(',f'));
 
 	    chart.y2Axis
-	        .tickFormat(function(d) { return '$' + d3.format(',.2f')(d) });
+	        .tickFormat(d3.format(',f'));
 
 	    chart.bars.forceY([0]).padData(false);
 	    //chart.lines.forceY([0]);
