algosight and penguin 2.1 test

--- a/algosight.html
+++ b/algosight.html
@@ -513,11 +513,11 @@ d3.json(trafficFile, function(data) {
 		  chart.y2Axis
 		  .tickFormat(d3.format(',f'));
 			
-		  chart.y3Axis
-		  .tickFormat(d3.format(',f'));
-				
-		  chart.y4Axis
-		  .tickFormat(d3.format(',f'));
+		  // chart.y3Axis
+		  // .tickFormat(d3.format(',f'));
+		  // 				
+		  // chart.y4Axis
+		  // .tickFormat(d3.format(',f'));
 
 	    chart.bars.forceY([0]).padData(false);
 	    //chart.lines.forceY([0]);
