--- a/algosight.html
+++ b/algosight.html
@@ -524,7 +524,7 @@ d3.json(trafficFile, function(data) {
 		  // chart.y4Axis
 		  // .tickFormat(d3.format(',f'));
 
-	    //chart.bars.forceY([0]).padData(false);
+	    chart.bars.forceY([0]).padData(false);
 	    //chart.lines.forceY([0]);
 
 	    d3.select('#chart1 svg')
