--- a/algosight.html
+++ b/algosight.html
@@ -525,7 +525,7 @@ d3.json(trafficFile, function(data) {
 		  // .tickFormat(d3.format(',f'));
 
 	    chart.bars.forceY([0]).padData(false);
-	    //chart.lines.forceY([0]);
+	    chart.lines.forceY([0]);
 
 	    d3.select('#chart1 svg')
 	        .datum(testdata)
