--- a/algosight.html
+++ b/algosight.html
@@ -512,11 +512,11 @@ d3.json(trafficFile, function(data) {
 	      })
 	      .showMaxMin(false);
 
-		  chart.y1Axis
+		  chart.yAxis
 		  .tickFormat(d3.format(',f'));
 
-		  chart.y2Axis
-		  .tickFormat(d3.format(',f'));
+		  // chart.y2Axis
+// 		  .tickFormat(d3.format(',f'));
 			
 		  // chart.y3Axis
 		  // .tickFormat(d3.format(',f'));
